tests/errors/E006.zen
int main() {
    return true + true;        /// Error 006: Boolean values cannot be used in arithmetic operations
}